feat: generate-data throw error when post category is invalid

--- a/src/posts/2025-01-02_测试用.md
+++ b/src/posts/2025-01-02_测试用.md
@@ -3,7 +3,7 @@ id: b16fe03df92d2d5aace-5216-44c5-871d-7
 title: 测试2
 createTime: 2025-01-02
 updateTime: 2025-01-03
-categories: vue2, 前端组件
+categories: vue, 前端组件
 tags:
 description:
 ---
