--- a/src/posts/2020-04-15_异步任务排队调用.md
+++ b/src/posts/2020-04-15_异步任务排队调用.md
@@ -4,32 +4,33 @@ title: 异步任务排队调用
 createTime: 2020-04-15
 updateTime: 2020-04-15
 categories: js
-tags: 
-description: 
+tags:
+description:
 ---
+
 有多个异步任务，要按照顺序调用：任务一完成后，才触发任务二。任务二完成后，才触发任务三……
 
 ```js
-const arr = ['emily', 'nancy', 'haha'];
+const arr = ["emily", "nancy", "haha"];
 let index = 0;
 
 function greeting(name) {
-	return new Promise(resolve => {
-		const time = Math.random() * 5000
-		setTimeout(() => {
-			resolve({ name, time });
-		}, time);
-	});
-};
+  return new Promise((resolve) => {
+    const time = Math.random() * 5000;
+    setTimeout(() => {
+      resolve({ name, time });
+    }, time);
+  });
+}
 
 function next() {
-	greeting(arr[index]).then(o => {
-		console.log(o);
-		index++;
-		if (index <= arr.length - 1) {
-			next();
-		}
-	})
+  greeting(arr[index]).then((o) => {
+    console.log(o);
+    index++;
+    if (index <= arr.length - 1) {
+      next();
+    }
+  });
 }
 next();
 ```
