chore: modify backslash to slash in post image path

--- a/src/posts/2020-01-14_get请求的参数包含中括号[]时，报错400.md
+++ b/src/posts/2020-01-14_get请求的参数包含中括号[]时，报错400.md
@@ -14,7 +14,7 @@ description:
 
 但是，只有此文件上传时会报错，其他文件是正常的。
 
-![在这里插入图片描述](..\post-assets\c9d7dd06-a213-4224-8710-b8e7699c101f.png)
+![在这里插入图片描述](../post-assets/c9d7dd06-a213-4224-8710-b8e7699c101f.png)
 （后文为了方便描述，将问题文件称为 a）
 
 ## 2 分析
