--- a/src/posts/2020-02-03_上传三合一：拖拽上传、上传文件、上传文件夹，一次搞定！.md
+++ b/src/posts/2020-02-03_上传三合一：拖拽上传、上传文件、上传文件夹，一次搞定！.md
@@ -14,7 +14,7 @@ description:
 
 在 drop 事件中通过 `e.dataTransfer.items` 递归获取拖拽的文件（夹）。具体看这篇文章：[拖拽本地文件夹到浏览器中，展示所有文件结构](https://blog.csdn.net/tangran0526/article/details/104108551)
 
-![在这里插入图片描述](..\post-assets\23d1811f-aae9-48db-998f-ad90863b0d42.png)
+![在这里插入图片描述](../post-assets/23d1811f-aae9-48db-998f-ad90863b0d42.png)
 
 ## 2 上传文件
 
@@ -43,7 +43,7 @@ description:
 ```
 
 效果：
-![在这里插入图片描述](..\post-assets\2afe5d08-e572-434f-bb4b-7362ff4375dd.png)
+![在这里插入图片描述](../post-assets/2afe5d08-e572-434f-bb4b-7362ff4375dd.png)
 
 ## 3 上传文件夹
 
@@ -73,7 +73,7 @@ description:
 
 File 对象的 webkitRelativePath 属性是文件的相对路径
 效果：
-![在这里插入图片描述](..\post-assets\4d34f513-0b0e-4034-837e-a6a727f456e9.png)
+![在这里插入图片描述](../post-assets/4d34f513-0b0e-4034-837e-a6a727f456e9.png)
 
 ## 4 三合一
 
