--- a/src/posts/2020-02-03_拖拽本地文件夹到浏览器中，展示所有文件结构.md
+++ b/src/posts/2020-02-03_拖拽本地文件夹到浏览器中，展示所有文件结构.md
@@ -13,7 +13,7 @@ description:
 ## 1 效果说明
 
 从本地拖拽文件（夹）到浏览器中，展示包含的所有文件。
-![在这里插入图片描述](..\post-assets\b7e6c8d8-9d32-4079-b8d0-db3958d47989.png)
+![在这里插入图片描述](../post-assets/b7e6c8d8-9d32-4079-b8d0-db3958d47989.png)
 
 ## 2 分析
 
@@ -44,12 +44,12 @@ dropArea.addEventListener("drop", (e) => {
 最终，我们拿到的是一个个 File 对象。但是，**无法判断一个 File 对象是文件夹还是内容**。
 
 File 对象属性如下：
-![在这里插入图片描述](..\post-assets\f1d29294-575d-4f0d-96cf-47c90c72f1d0.png)
+![在这里插入图片描述](../post-assets/f1d29294-575d-4f0d-96cf-47c90c72f1d0.png)
 不能用 type 来判断，因为不靠谱：
 
 > type 属性：浏览器不会实际读取文件的字节流，而是根据文件的扩展名来判断。而且，file.type 仅仅对常见文件类型可靠，不常见的文件扩展名会返回空字符串。
 
-![在这里插入图片描述](..\post-assets\03c4c56f-90ec-406c-960a-6a4541d90a9a.png)
+![在这里插入图片描述](../post-assets/03c4c56f-90ec-406c-960a-6a4541d90a9a.png)
 总结：用 `e.dataTransfer.files` 最终获取到的是 File 对象，无法判断一个 File 对象是文件还是文件夹，所以不能用！
 
 ## 4 用 e.dataTransfer.items
