--- a/src/posts/2020-02-11_使用 v-for ，删除列表中的一项后，视图渲染出错.md
+++ b/src/posts/2020-02-11_使用 v-for ，删除列表中的一项后，视图渲染出错.md
@@ -21,7 +21,7 @@ description:
 </tr>
 ```
 
-![在这里插入图片描述](..\post-assets\1ca82da7-3beb-4e46-a568-77264418299d.png)
+![在这里插入图片描述](../post-assets/1ca82da7-3beb-4e46-a568-77264418299d.png)
 删除其中一项后，视图渲染出错
 
 ## 2 原因
