--- a/src/posts/2020-02-12_vue2 踩坑笔记.md
+++ b/src/posts/2020-02-12_vue2 踩坑笔记.md
@@ -11,7 +11,7 @@ description: 记录学习、使用 vue2 时踩的坑和解决办法
 ## v-if 的"适当"陷阱
 
 如果 `v-if` `v-else` 的两个组件比较像，vue 可能会复用其中的部分内容。不想让他复用就加 key
-![在这里插入图片描述](..\post-assets\388976fd-352a-4f27-9af0-b73ef106e725.png)
+![在这里插入图片描述](../post-assets/388976fd-352a-4f27-9af0-b73ef106e725.png)
 详细描述看之前的文章：[解决＜ el-select ＞单选、多选切换时出现的 bug](https://blog.csdn.net/tangran0526/article/details/118513920)
 
 ## 内部监听生命周期函数
