--- a/src/posts/2020-02-15_字符串匹配：Sunday算法.md
+++ b/src/posts/2020-02-15_字符串匹配：Sunday算法.md
@@ -9,7 +9,7 @@ description:
 ---
 
 来源于力扣的题目：[28. 实现 strStr()](https://leetcode-cn.com/problems/implement-strstr/)
-![在这里插入图片描述](..\post-assets\ff609f83-8445-4e2a-894f-c082df9dccec.png)
+![在这里插入图片描述](../post-assets/ff609f83-8445-4e2a-894f-c082df9dccec.png)
 
 ## 思路
 
@@ -18,7 +18,7 @@ description:
 暴力方法是每次把`i`往后挪一格，Sunday 方法每次挪`i`是有策略的。
 
 先看图（目标串是绿色的，pattern 是蓝色的）：
-![在这里插入图片描述](..\post-assets\7e7c9c37-544f-4665-8864-4741ceb39d33.png)
+![在这里插入图片描述](../post-assets/7e7c9c37-544f-4665-8864-4741ceb39d33.png)
 
 具体来说：
 
