--- a/src/posts/2020-02-15_算法：动态规划.md
+++ b/src/posts/2020-02-15_算法：动态规划.md
@@ -16,7 +16,7 @@ description:
 
 [【70 爬楼梯】](https://leetcode-cn.com/problems/climbing-stairs/)
 
-![在这里插入图片描述](..\post-assets\b6ed37d7-0b2a-4141-b396-88858b71b186.png)
+![在这里插入图片描述](../post-assets/b6ed37d7-0b2a-4141-b396-88858b71b186.png)
 
 ## 思路
 
