--- a/src/posts/2020-03-02_element 踩坑笔记.md
+++ b/src/posts/2020-03-02_element 踩坑笔记.md
@@ -25,7 +25,7 @@ $--font-path: '~element-ui/lib/theme-chalk/fonts';
 把主题色改成紫色后，按钮、文字、loading 等全都会变成紫色。而且相关颜色（比如按钮 hover 时的颜色）也会自动计算出来，不需要自己设置。
 
 除了主题色，还有其他变量可以改。看源文件可以发现，所以变量的定义都统一放在 `~element-ui\packages\theme-chalk\src\common\var.scss` 中，想知道哪些可以改自己看就行：（下面红圈的都是可以改的）
-![在这里插入图片描述](..\post-assets\fa6e22bd-99ce-408a-a199-203cdb596ed8.png)
+![在这里插入图片描述](../post-assets/fa6e22bd-99ce-408a-a199-203cdb596ed8.png)
 
 ## el-form
 
@@ -126,7 +126,7 @@ rules: {
 ## 用 v-for 渲染多个 el-switch ，需要知道是谁 change 了
 
 开关的 change 事件的回调，只会返回新值：
-![在这里插入图片描述](..\post-assets\16044f08-8d34-4500-880e-21280750ebb4.png)
+![在这里插入图片描述](../post-assets/16044f08-8d34-4500-880e-21280750ebb4.png)
 用 v-for 渲染多个 el-switch，需要知道是谁 change 了：
 
 ```html
