--- a/src/posts/2020-03-02_开发方法论.md
+++ b/src/posts/2020-03-02_开发方法论.md
@@ -32,7 +32,7 @@ graph LR
 如果在开发后期引入了新的 UI 组件，之前写的全局样式，可能会影响到 UI 组件里的 button ！
 
 - 这时，如果修改自己的 button 样式（比如添加 class 名称），那么需要给之前写的所有 button 手动添加 class，很麻烦。
-- 如果不修改之前写的全局 button 样式，只能把 UI 组件中被影响的逐个修改，也很烦。如下图： ![在这里插入图片描述](..\post-assets\405156f9-1b66-4460-8292-397495da0d42.png)
+- 如果不修改之前写的全局 button 样式，只能把 UI 组件中被影响的逐个修改，也很烦。如下图： ![在这里插入图片描述](../post-assets/405156f9-1b66-4460-8292-397495da0d42.png)
 
 所以，一定要吸取教训：**写全局样式的时候，要加上 class ！**
 
