--- a/src/posts/2020-04-07_js 单线程、执行栈、事件循环.md
+++ b/src/posts/2020-04-07_js 单线程、执行栈、事件循环.md
@@ -36,7 +36,7 @@ description:
 
 当我们调用一个方法的时候，js 会生成一个与这个方法对应的执行环境（context），又叫执行上下文。这个执行环境中存在着这个方法的私有作用域，上层作用域的指向，方法的参数，这个作用域中定义的变量以及这个作用域的 this 对象。
 （所以递归次数过多时，不断压栈，放不下了就会栈溢出）
-![在这里插入图片描述](..\post-assets\c26e5d88-508f-4bc2-b6cc-269b3d73dd07.png)
+![在这里插入图片描述](../post-assets/c26e5d88-508f-4bc2-b6cc-269b3d73dd07.png)
 
 ###### 异步操作
 
