--- a/src/posts/2020-04-07_纯 canvas 实现漂亮的仪表盘.md
+++ b/src/posts/2020-04-07_纯 canvas 实现漂亮的仪表盘.md
@@ -8,7 +8,7 @@ tags: canvas
 description: 纯canvas实现漂亮的仪表盘，内含源码
 ---
 
-![在这里插入图片描述](..\post-assets\9cd0b297-6105-4ccb-8ff0-c29d69d12e07.png)
+![在这里插入图片描述](../post-assets/9cd0b297-6105-4ccb-8ff0-c29d69d12e07.png)
 经验：
 
 1. `save-restore-restore-restore` 是不行的。用 `save` 保存的状态只能用一次，最后两个 restore 是回不到第一次 save 的状态的。
