--- a/src/posts/2021-06-17_拖拽元素内部有富文本时，富文本无法通过鼠标拖拽选中文字.md
+++ b/src/posts/2021-06-17_拖拽元素内部有富文本时，富文本无法通过鼠标拖拽选中文字.md
@@ -11,10 +11,10 @@ description:
 ## 问题描述
 
 正常情况下，对于文本框中的文字，可以通过鼠标拖拽选中
-![在这里插入图片描述](..\post-assets\c8566bf2-f3a1-4329-a3fe-797bb4910629.png)
+![在这里插入图片描述](../post-assets/c8566bf2-f3a1-4329-a3fe-797bb4910629.png)
 
 但是，当外层是可拖拽移动时，就会无法选中文字了：
-![在这里插入图片描述](..\post-assets\3832cfd3-d07f-47b5-a527-bdd2db20f87e.png)
+![在这里插入图片描述](../post-assets/3832cfd3-d07f-47b5-a527-bdd2db20f87e.png)
 （项目中拖拽组件用的是 vue-grid-layout，富文本用的是 tinymce）
 
 ## 思路
@@ -46,7 +46,7 @@ D --> E[mouseup]
 - 这段时间 > 500ms，认为用户想拖拽。需要手动把编辑器 blur 掉
 
 上面是基本思路，还有一些需要处理的逻辑，如下图
-![在这里插入图片描述](..\post-assets\106a1ec3-8840-42c5-9a91-61dd223e1c5a.png)
+![在这里插入图片描述](../post-assets/106a1ec3-8840-42c5-9a91-61dd223e1c5a.png)
 通过 focus 事件辅助判断，思路如下
 
 - mousedown：记录按下鼠标的时间 time1
