--- a/src/posts/2021-06-18_chrome 中的 F12 调试技巧.md
+++ b/src/posts/2021-06-18_chrome 中的 F12 调试技巧.md
@@ -10,7 +10,7 @@ description:
 
 - `ctrl` + `shift` + `p` 调出 Command
   - `screenshot` 截屏
-    ![在这里插入图片描述](..\post-assets\80ac0a61-7dc7-43f9-9703-4d3b92e035b3.png)
+    ![在这里插入图片描述](../post-assets/80ac0a61-7dc7-43f9-9703-4d3b92e035b3.png)
   - `show animations` 打开动画面板
 
 ## Elements
@@ -29,7 +29,7 @@ description:
 
 - 条件断点：先打个正常的断点，然后右键 -> Edit breakpoint
 - XHR 断点
-  ![在这里插入图片描述](..\post-assets\a18d7ff0-26c7-4039-a163-6c4bbff1eb6d.png)
+  ![在这里插入图片描述](../post-assets/a18d7ff0-26c7-4039-a163-6c4bbff1eb6d.png)
 - debug 的时候，Call Stack 会跳过 **ignore list** 中的文件并且在这些文件抛出的断点上不会停下
 
   - 【这个和 blackbox 不是一回事！！超好用的 blackbox 没有了 ！！难过(；′⌒`)】
@@ -43,14 +43,14 @@ description:
 ## Network
 
 - 调网速
-  ![在这里插入图片描述](..\post-assets\d5015461-1255-472b-a327-be273571292b.png)
+  ![在这里插入图片描述](../post-assets/d5015461-1255-472b-a327-be273571292b.png)
 
 - 筛选条件，按住 Ctrl 可以多选
 - 右键请求 -> Replay XHR（场景：想要重新发送某个请求，但不想刷新页面或手动触发事件）
 
 ### request timing
 
-![在这里插入图片描述](..\post-assets\f4feba48-007d-401f-bc2f-67316edf1577.png)
+![在这里插入图片描述](../post-assets/f4feba48-007d-401f-bc2f-67316edf1577.png)
 
 - Queueing：浏览器在以下情况下对请求排队
   - 存在更高优先级的请求
