--- a/src/posts/2021-06-18_vue2 源码思路理解.md
+++ b/src/posts/2021-06-18_vue2 源码思路理解.md
@@ -593,7 +593,7 @@ const data = {
 };
 ```
 
-![在这里插入图片描述](..\post-assets\77703e3f-cb65-419e-add6-25bdbaba73d1.png)
+![在这里插入图片描述](../post-assets/77703e3f-cb65-419e-add6-25bdbaba73d1.png)
 
 #### getter ： 返回值 + 收集依赖
 
@@ -853,7 +853,7 @@ function del(target, key) {
   ```
 
   渲染结果是：
-  ![在这里插入图片描述](..\post-assets\974dd19b-4ee6-4188-8d63-888b0dcada3d.png)
+  ![在这里插入图片描述](../post-assets/974dd19b-4ee6-4188-8d63-888b0dcada3d.png)
 
 无论是 runtime 版本，还是 runtime-with-compiler 版本， $mount 函数最终都将通过 mountComponent 函数去真正的挂载组件
 
@@ -1152,9 +1152,9 @@ class Watcher {
 ```
 
 `$watch()` 时，发生了什么：
-![在这里插入图片描述](..\post-assets\647c32f3-f6b9-4c5d-b6db-3a21419ffee7.png)
+![在这里插入图片描述](../post-assets/647c32f3-f6b9-4c5d-b6db-3a21419ffee7.png)
 `vm.a = 5` 时，发生了什么
-![在这里插入图片描述](..\post-assets\80391508-b278-4046-9135-2524d2ed66a8.png)
+![在这里插入图片描述](../post-assets/80391508-b278-4046-9135-2524d2ed66a8.png)
 
 ### 例：template 中用到了 a。修改 a 的值时，发生了什么
 
@@ -1172,7 +1172,7 @@ class Watcher {
 </script>
 ```
 
-![在这里插入图片描述](..\post-assets\c35ed498-f75c-415b-b509-202d22f5dff7.png)
+![在这里插入图片描述](../post-assets/c35ed498-f75c-415b-b509-202d22f5dff7.png)
 
 ### watcher.run()
 
@@ -1422,7 +1422,7 @@ var vm = new Vue({
 ```
 
 执行完这一行后：
-![在这里插入图片描述](..\post-assets\43d89799-fd21-4a56-ab6c-b00e4031dff6.png)
+![在这里插入图片描述](../post-assets/43d89799-fd21-4a56-ab6c-b00e4031dff6.png)
 a 的值变化，触发 `w1.update()` => `queueWatcher (w1)`：
 
 - queue 由 `[]` 变为 `[w1]`
@@ -1440,7 +1440,7 @@ pending = true;
 ```
 
 然后执行：
-![在这里插入图片描述](..\post-assets\80ff3bae-2d1b-40f4-9ee1-5475938dca32.png)
+![在这里插入图片描述](../post-assets/80ff3bae-2d1b-40f4-9ee1-5475938dca32.png)
 nextTick(cb1);
 
 - callbacks 中由 `[flushSchedulerQueue]` 变为 `[flushSchedulerQueue,cb1]`
@@ -1496,7 +1496,7 @@ pending = true;
 ```
 
 输出结果：
-![在这里插入图片描述](..\post-assets\063c14a5-9717-4c8a-9361-206a465e504c.png)
+![在这里插入图片描述](../post-assets/063c14a5-9717-4c8a-9361-206a465e504c.png)
 
 ```html
 <div id="app">{{a}}</div>
@@ -1528,7 +1528,7 @@ pending = true;
 ```
 
 输出结果：
-![在这里插入图片描述](..\post-assets\b61ba2da-fe9a-403c-82b1-9a2b4d797348.png)
+![在这里插入图片描述](../post-assets/b61ba2da-fe9a-403c-82b1-9a2b4d797348.png)
 
 ```html
 <div id="app"></div>
@@ -1565,7 +1565,7 @@ pending = true;
 ```
 
 输出结果：
-![在这里插入图片描述](..\post-assets\961aa181-9eac-421c-9475-baabf794e0c6.png)
+![在这里插入图片描述](../post-assets/961aa181-9eac-421c-9475-baabf794e0c6.png)
 
 ## 深度观测
 
@@ -1821,9 +1821,9 @@ vm 中的 4 个 Dep 对象，仍然只关注 d_a：
 #### 情况二中多出来的依赖关系是怎么来的
 
 渲染模版中有 b，所以渲染函数会触发 b 的 computedGetter
-![在这里插入图片描述](..\post-assets\49fb9eb8-b73c-4094-84fe-4a36f077a8de.png)
+![在这里插入图片描述](../post-assets/49fb9eb8-b73c-4094-84fe-4a36f077a8de.png)
 整理并简化一下，computedGetter 就变成：
-![在这里插入图片描述](..\post-assets\ceb7f888-f6ac-4114-b138-d0213c70cac2.png)
+![在这里插入图片描述](../post-assets/ceb7f888-f6ac-4114-b138-d0213c70cac2.png)
 
 所以，计算属性是一个 ==桥梁==。让渲染函数的 watcher 和 a 之间构建了直接的依赖关系。
 
@@ -1840,7 +1840,7 @@ vm 中的 4 个 Dep 对象，仍然只关注 d_a：
 
 ##### 偏个题 Dep.target
 
-![在这里插入图片描述](..\post-assets\1a7847e0-d690-4f13-8f3f-0d46abb65010.png)
+![在这里插入图片描述](../post-assets/1a7847e0-d690-4f13-8f3f-0d46abb65010.png)
 
 #### 情况三：复杂一点
 
@@ -1870,8 +1870,8 @@ vm 中的 4 个 Dep 对象，仍然只关注 d_a：
 ```
 
 （渲染函数的 watcher 记为 w0）
-![在这里插入图片描述](..\post-assets\f13a4b8b-2b1b-4f45-81a9-ab550617d95f.png)
-![在这里插入图片描述](..\post-assets\ee99af8e-8925-472f-a33b-35ae84fa067b.png)
+![在这里插入图片描述](../post-assets/f13a4b8b-2b1b-4f45-81a9-ab550617d95f.png)
+![在这里插入图片描述](../post-assets/ee99af8e-8925-472f-a33b-35ae84fa067b.png)
 计算属性 c 是桥梁，让 d 和 a、b 搭上线
 计算属性 d 是桥梁，让 渲染函数 和 a、b 搭上线
 
