--- a/src/posts/2021-11-18_setMonth “出错“.md
+++ b/src/posts/2021-11-18_setMonth “出错“.md
@@ -17,7 +17,7 @@ time.setMonth(currentMonth - 1);
 ```
 
 上面这样写是错误的。比如现在是 3 月 31 日，最终拿到的月份还是三月：
-![](..\post-assets\e39d9b5d-7d0a-4b2f-a8fe-9ec1d5248bfe.png)
+![](../post-assets/e39d9b5d-7d0a-4b2f-a8fe-9ec1d5248bfe.png)
 这是因为 setMonth 有两个参数， [文档在这里](https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Reference/Global_Objects/Date/setMonth)
 
 > 如果不指定 dayValue 参数，就会使用 getDate 方法的返回值。
