--- a/src/posts/2021-12-10_Life Game.md
+++ b/src/posts/2021-12-10_Life Game.md
@@ -9,7 +9,7 @@ description: 康威生命游戏
 ---
 
 规则：[康威生命游戏](https://zh.wikipedia.org/wiki/%E5%BA%B7%E5%A8%81%E7%94%9F%E5%91%BD%E6%B8%B8%E6%88%8F)
-![在这里插入图片描述](..\post-assets\19a7e182-6e9d-4234-8539-08f2abd859c1.png)
+![在这里插入图片描述](../post-assets/19a7e182-6e9d-4234-8539-08f2abd859c1.png)
 
 用 **@vue/composition-api** 形式写的。
 纯写着玩。没做优化，80\*80 的格子，演化间隔 1000/60 ms 时已经能感到明显的卡顿，应该是渲染问题。
