--- a/src/posts/2022-07-15_vite项目中动态引用图片.md
+++ b/src/posts/2022-07-15_vite项目中动态引用图片.md
@@ -65,7 +65,7 @@ const imgSrc = computed(() => `/pic${number.value}.jpg`);
 - prod 时，图片地址为 **/pic1.jpg**，能找到图片（dist 下有这两张图片）
 
 可行，但是不推荐，因为 public 不是用来干这个的。见 vite 的官方文档：
-![在这里插入图片描述](..\post-assets\c80e523f-ebb3-4bf8-b2dd-3a4da617e0c6.png)
+![在这里插入图片描述](../post-assets/c80e523f-ebb3-4bf8-b2dd-3a4da617e0c6.png)
 
 ### 方案三（推荐）
 
@@ -81,4 +81,4 @@ const imgSrc = computed(() => new URL(`../assets/pic${number.value}.jpg`, import
 - prod 时，图片地址为 **http://127.0.0.1:4173/assets/pic1.0d71d2fe.jpg**，能找到图片（dist/assets 下有这两张图片，名字带 hash）
 
 可行，推荐。这种写法也是 vite 官网中提到的：
-![在这里插入图片描述](..\post-assets\836c6591-bde9-4ca1-b647-d8b50106d94a.png)
+![在这里插入图片描述](../post-assets/836c6591-bde9-4ca1-b647-d8b50106d94a.png)
