--- a/src/posts/2022-08-11_用 p5.js 写个五子棋.md
+++ b/src/posts/2022-08-11_用 p5.js 写个五子棋.md
@@ -8,7 +8,7 @@ tags: p5
 description: 用 p5.js 写个五子棋，内附完整代码
 ---
 
-![在这里插入图片描述](..\post-assets\00e1ab5e-15fe-4f8d-a33b-d7335aeff09c.png)
+![在这里插入图片描述](../post-assets/00e1ab5e-15fe-4f8d-a33b-d7335aeff09c.png)
 之前写 Life Game 时渲染用的是 div，这次换 canvas 试试。
 找了个 canvas 库 [p5i](https://github.com/antfu/p5i)，用起来还可以
 写着玩的，代码还有很多可优化的，懒得弄了。
