--- a/src/posts/2022-08-12_css flex 踩坑总结.md
+++ b/src/posts/2022-08-12_css flex 踩坑总结.md
@@ -19,7 +19,7 @@ css 的 flex 布局虽然好用，但坑也不少。整理如下：
 - 元素尺寸小时，在父元素里居中显示
 
 - 元素尺寸超过父元素时，父元素出滚动条
-  ![在这里插入图片描述](..\post-assets\10e95dab-f5c6-42b7-a1a3-65f4ad2f22ea.png)![在这里插入图片描述](..\post-assets\c52b6158-0b94-4283-ae1c-d9f2032c2068.png)
+  ![在这里插入图片描述](../post-assets/10e95dab-f5c6-42b7-a1a3-65f4ad2f22ea.png)![在这里插入图片描述](../post-assets/c52b6158-0b94-4283-ae1c-d9f2032c2068.png)
 
 但 flex 的 center 是有 bug 的（`justify-content:center` 和 `align-items:center`）：
 
@@ -45,7 +45,7 @@ css 的 flex 布局虽然好用，但坑也不少。整理如下：
 ```
 
 效果：
-![在这里插入图片描述](..\post-assets\bf88727e-cac6-44ac-9e4b-b7d8840cd570.png)
+![在这里插入图片描述](../post-assets/bf88727e-cac6-44ac-9e4b-b7d8840cd570.png)
 当元素尺寸超过父容器时，无论是水平方向还是竖直方向，元素内容都无法显示全。
 
 ### 解决方案：
