--- a/src/posts/2023-03-09_工作记录：调研monorepo和微前端.md
+++ b/src/posts/2023-03-09_工作记录：调研monorepo和微前端.md
@@ -84,4 +84,4 @@ qiankun 是实现微前端的一个工具库。我们项目用不了，因为 qi
 1. 我们的项目不适用微前端。理由懒得细说了，看这个吧 - [你可能并不需要微前端](https://www.yuque.com/kuitos/gky7yw/fy3qri)
 2. 可以使用 monorepo。比如说：把比较独立的模块做成包。主应用是一个项目，每个独立包都是单独的项目。把这些项目都放在一个仓库中去管理。
    这里只是说可以这样做，至于到底要不要做，还需要再仔细衡量。因为这么重构，改动可能会非常大。（在我写的另一篇文章 [《工作记录：bi 重构》](https://blog.csdn.net/tangran0526/article/details/129415819) 中就提到了。在调研完之后，我在开发中尝试把 Widget 独立成包，但是工作量远超想象，不得不放弃了。）
-   ![在这里插入图片描述](..\post-assets\557ee8a1-6f3c-449f-a41c-1e64099f3866.png)
+   ![在这里插入图片描述](../post-assets/557ee8a1-6f3c-449f-a41c-1e64099f3866.png)
