--- a/src/posts/2024-04-11_学习 vueuse 源码.md
+++ b/src/posts/2024-04-11_学习 vueuse 源码.md
@@ -13,7 +13,7 @@ description: 【想不明白】 特意用 counter computed 是什么目的？建
 1. 【使用】时注意：默认 lazy = false, 所以会立刻调用，所以要注意变量、函数的定义顺序。默认 onError = null，所以不会抛出错误，debug 很难受
 2. 异步操作完成之后，比较 counter 和 counterAtBeginning 比较来判断是否是最新一次调用
 3. 内部使用 watchEffect 实现。但 watchEffect 本身没有返回值，是不可能 lazy 调用的，巧妙地使用 started 和 computed 实现 lazy
-   ![在这里插入图片描述](..\post-assets\463fe492-52ee-425b-8635-4d0ef7dd3046.png)
+   ![在这里插入图片描述](../post-assets/463fe492-52ee-425b-8635-4d0ef7dd3046.png)
 
 ---
 
@@ -21,7 +21,7 @@ description: 【想不明白】 特意用 counter computed 是什么目的？建
 
 vue3 提供了 customRef
 
-![在这里插入图片描述](..\post-assets\73c22f20-8904-4c06-b6ae-41d9081ca14f.png)
+![在这里插入图片描述](../post-assets/73c22f20-8904-4c06-b6ae-41d9081ca14f.png)
 
 ---
 
@@ -38,7 +38,7 @@ Fires when users start typing on non-editable elements.
 
 1. `document.activeElement` 当前获得焦点的 Element ，如果没有焦点元素，会返回 body 或者 null
 2. input 和 textarea 是 editable 的（不需要判断是否 disabled，因为 disabled 的元素无法获得焦点）；添加了 contenteditable 属性的元素（注意：这种判断方法只是这个组件的方案！）
-   ![在这里插入图片描述](..\post-assets\99af0502-f902-4a79-85cd-77c38eca9ced.png)
+   ![在这里插入图片描述](../post-assets/99af0502-f902-4a79-85cd-77c38eca9ced.png)
 
 ---
 
@@ -46,7 +46,7 @@ Fires when users start typing on non-editable elements.
 
 未曾设想的道路，还是用的 customRef
 【想不明白】 onMounted 和 onUpdated 两行是干什么的？
-![在这里插入图片描述](..\post-assets\392a72c4-cc42-4da2-9a23-68e2f48d68b8.png)
+![在这里插入图片描述](../post-assets/392a72c4-cc42-4da2-9a23-68e2f48d68b8.png)
 
 ---
 
@@ -54,7 +54,7 @@ Fires when users start typing on non-editable elements.
 
 【想不明白】 特意用 counter computed 是什么目的？建一个 ref 并返回，直接在 blur 和 focus 的 handler 中修改 ref 不行吗？
 
-![在这里插入图片描述](..\post-assets\8b871971-ad63-4ddb-ae15-9471ebf90cc0.png)
+![在这里插入图片描述](../post-assets/8b871971-ad63-4ddb-ae15-9471ebf90cc0.png)
 
 ---
 
