--- a/src/posts/2025-01-02_测试用.md
+++ b/src/posts/2025-01-02_测试用.md
@@ -11,8 +11,8 @@ draft: 1
 
 33343
 
-![在这里插入图片描述](..\post-assets\00e1ab5e-15fe-4f8d-a33b-d7335aeff09c.png)
+![在这里插入图片描述](../post-assets/00e1ab5e-15fe-4f8d-a33b-d7335aeff09c.png)
 
-![在这里插入图片描述](..\post-assets\8a0b9a6e-0c99-4211-8fe5-2b19ccbb76f7.png)
+![在这里插入图片描述](../post-assets/8a0b9a6e-0c99-4211-8fe5-2b19ccbb76f7.png)
 
 ![alt text](../post-assets/1cdf963a-8e02-4f94-b38c-5be02eb9ce66.png)
