--- a/src/posts/2020-01-09_PDF.js 超简单使用教程，一看就会！.md
+++ b/src/posts/2020-01-09_PDF.js 超简单使用教程，一看就会！.md
@@ -14,11 +14,11 @@ pdfjs 可以在线预览 pdf 文件，提供丝滑流畅的预览效果，支持
 
 去[官网](https://mozilla.github.io/pdf.js/getting_started/#download)下载 Prebuilt 版本
 
-![在这里插入图片描述](..\post-assets\d8254493-7b2e-410e-bd40-236711f2b884.png)
+![在这里插入图片描述](../post-assets/d8254493-7b2e-410e-bd40-236711f2b884.png)
 
 下载后解压，文件结构为：
 
-![在这里插入图片描述](..\post-assets\cd5a7d80-a3dd-4ee7-835b-6713c2772fd9.png)
+![在这里插入图片描述](../post-assets/cd5a7d80-a3dd-4ee7-835b-6713c2772fd9.png)
 
 ---
 
@@ -39,7 +39,7 @@ server {
 
 启动 nginx，访问 `http://localhost:8888/web/viewer.html`
 
-![在这里插入图片描述](..\post-assets\38d32b22-7760-47c9-be16-3d72ad0eabe1.png)
+![在这里插入图片描述](../post-assets/38d32b22-7760-47c9-be16-3d72ad0eabe1.png)
 
 ---
 
@@ -47,13 +47,13 @@ server {
 
 默认加载的文件是：
 
-![在这里插入图片描述](..\post-assets\cf2551b4-e0df-4f61-8568-b60420b1c967.png)
+![在这里插入图片描述](../post-assets/cf2551b4-e0df-4f61-8568-b60420b1c967.png)
 
 想要加载别的文件，应该怎么做呢？
 
 在 `web/viewer.js` 文件中找到 `webViewerInitialized` 方法：
 
-![在这里插入图片描述](..\post-assets\8b217457-71f5-46af-870e-717064ddf951.png)
+![在这里插入图片描述](../post-assets/8b217457-71f5-46af-870e-717064ddf951.png)
 
 以上代码说明：如果地址栏参数中有 file 字段，就使用 file 字段的地址；如果没有，就用 `defaultUrl`
 
@@ -63,11 +63,11 @@ server {
 
 把文件放到 `web` 目录下：
 
-![在这里插入图片描述](..\post-assets\36596bca-b007-4c36-b9d1-4205753baa1b.png)
+![在这里插入图片描述](../post-assets/36596bca-b007-4c36-b9d1-4205753baa1b.png)
 
 添加地址栏参数 `file=能看吗.pdf`后访问，预览成功！
 
-![在这里插入图片描述](..\post-assets\1cbac90e-071f-4c4e-80bc-74322556b0cd.png)
+![在这里插入图片描述](../post-assets/1cbac90e-071f-4c4e-80bc-74322556b0cd.png)
 
 ## 3.2 预览其他服务器中的文件
 
@@ -113,7 +113,7 @@ server {
 
 预览成功：
 
-![在这里插入图片描述](..\post-assets\7f8e233c-71bc-44a3-875d-4459e3ca3d86.png)
+![在这里插入图片描述](../post-assets/7f8e233c-71bc-44a3-875d-4459e3ca3d86.png)
 
 ---
 
@@ -121,7 +121,7 @@ server {
 
 在 `web/viewer.html` 中，样式可以随便修改，比如把操作栏移动到下面，改成粉色：
 
-![在这里插入图片描述](..\post-assets\705a5bb7-b728-40a9-a4a3-cbdd7275a78e.png)
+![在这里插入图片描述](../post-assets/705a5bb7-b728-40a9-a4a3-cbdd7275a78e.png)
 
 需要注意的是：
 
@@ -131,4 +131,4 @@ server {
 
 因为：pdfjs 在进行初始化（绑定事件）的时候，是根据 id 来找元素的。如果找不到 DOM 元素，就会报错：
 
-![在这里插入图片描述](..\post-assets\26d8dd3d-7ea7-4c3c-86c3-089a45a6bcd4.png)
+![在这里插入图片描述](../post-assets/26d8dd3d-7ea7-4c3c-86c3-089a45a6bcd4.png)
