--- a/src/posts/2020-06-15_动态读取菜单、面包屑.md
+++ b/src/posts/2020-06-15_动态读取菜单、面包屑.md
@@ -54,12 +54,12 @@ description: 动态读取菜单、面包屑（权限控制、名称显示）
 2. 将路由信息存在数据库中（系统中最好要包含权限管理页面，方便开发时录入、修改路由信息）
    项目中最好要包含**权限管理**页面，方便在开发阶段录入、修改路由信息。
    但要注意，在项目上线前要隐藏权限管理页面。因为这里配置的权限，和前端路由是必须要对应上的，不能随便改。如果用户一定要看权限管理页面，那么也不能提供新增、删除功能，只能编辑，编辑时也只允许改名称、图标、排序。
-   ![在这里插入图片描述](..\post-assets\b84abcec-a16c-4563-a3f7-1682b2bd5de2.png)
+   ![在这里插入图片描述](../post-assets/b84abcec-a16c-4563-a3f7-1682b2bd5de2.png)
 3. 给用户赋予权限：（用户 -> 角色 -> 权限）
 
 ## 获取权限信息
 
-![在这里插入图片描述](..\post-assets\200f548d-031f-456a-9aa3-34ab8a656d1c.png)
+![在这里插入图片描述](../post-assets/200f548d-031f-456a-9aa3-34ab8a656d1c.png)
 
 1. 获取面包屑中的内容文字：用 $route.matched 获取所有匹配上的路由。然后从 route.meta.title 中读名字
 2. 系统管理是个过渡页面，没有真正的页面，那么就取它的 redirect 值
