chore: redownload broken image

--- a/src/posts/2022-08-24_p5.js 写个连连看，发布到 github pages.md
+++ b/src/posts/2022-08-24_p5.js 写个连连看，发布到 github pages.md
@@ -276,7 +276,7 @@ function initCells() {
   }
 ```
 
-![在这里插入图片描述](../post-assets/6624c5df-2cb4-4b81-a5bd-fc4089ed4e67.png) ![在这里插入图片描述](../post-assets/7ffe1877-ca90-4f8e-97c6-0b2b91522ac6.png) ![在这里插入图片描述](../post-assets/91ad68a3-7789-4ee2-9a00-48a25c689a62.png) ![在这里插入图片描述](../post-assets/a1d13e33-8639-4f1b-a1c3-06cb333d0498.png)
+![在这里插入图片描述](../post-assets/6624c5df-2cb4-4b81-a5bd-fc4089ed4e67.png)
 
 ### 消除时显示路径
 
