chore: clear md updateTime(wrong info from csdn)

--- a/src/posts/2020-01-14_get请求的参数包含中括号[]时，报错400.md
+++ b/src/posts/2020-01-14_get请求的参数包含中括号[]时，报错400.md
@@ -2,7 +2,7 @@
 id: 4217f679-ac80-4df5-875e-e775d593e8f5
 title: get请求的参数包含中括号[]时，报错400
 createTime: 2020-01-14
-updateTime: 2020-01-14
+updateTime:
 categories: js
 tags:
 description:
