--- a/src/posts/2020-01-14_禁止浏览器记住密码.md
+++ b/src/posts/2020-01-14_禁止浏览器记住密码.md
@@ -2,7 +2,7 @@
 id: a31a2786-9ee1-4847-9a01-c13d323eda4a
 title: 禁止浏览器记住密码
 createTime: 2020-01-14
-updateTime: 2020-01-14
+updateTime:
 categories: js
 tags:
 description:
