--- a/src/posts/2020-02-03_上传三合一：拖拽上传、上传文件、上传文件夹，一次搞定！.md
+++ b/src/posts/2020-02-03_上传三合一：拖拽上传、上传文件、上传文件夹，一次搞定！.md
@@ -2,7 +2,7 @@
 id: e804da0f-9378-4047-83f7-ec37487f2cd9
 title: 上传三合一：拖拽上传、上传文件、上传文件夹，一次搞定！
 createTime: 2020-02-03
-updateTime: 2020-02-03
+updateTime:
 categories: js
 tags:
 description:
