--- a/src/posts/2020-02-03_拖拽本地文件夹到浏览器中，展示所有文件结构.md
+++ b/src/posts/2020-02-03_拖拽本地文件夹到浏览器中，展示所有文件结构.md
@@ -2,7 +2,7 @@
 id: 630091a6-0906-4fd2-9053-4b0f2c839794
 title: 拖拽本地文件夹到浏览器中，展示所有文件结构
 createTime: 2020-02-03
-updateTime: 2020-02-03
+updateTime:
 categories: js
 tags:
 description:
