--- a/src/posts/2020-02-04_计算文件 MD5.md
+++ b/src/posts/2020-02-04_计算文件 MD5.md
@@ -2,7 +2,7 @@
 id: 023a76e9-c7e0-4f47-87e5-bfad786be472
 title: 计算文件 MD5
 createTime: 2020-02-04
-updateTime: 2020-02-04
+updateTime:
 categories: js
 tags:
 description: 本篇文章的重点：拿到 File 对象之后，如何计算文件的 md5 值？几千个文件同时计算，页面卡顿崩溃怎么解决？
