--- a/src/posts/2020-02-06_IE 踩坑合集.md
+++ b/src/posts/2020-02-06_IE 踩坑合集.md
@@ -2,7 +2,7 @@
 id: d4336759-1a27-4e94-86a5-7394f5c186c7
 title: IE 踩坑合集
 createTime: 2020-02-06
-updateTime: 2020-02-06
+updateTime:
 categories: js
 tags:
 description:
