--- a/src/posts/2020-02-11_使用 v-for ，删除列表中的一项后，视图渲染出错.md
+++ b/src/posts/2020-02-11_使用 v-for ，删除列表中的一项后，视图渲染出错.md
@@ -2,7 +2,7 @@
 id: a5aa2069-3490-4119-a5dc-e0812be0d407
 title: 使用 v-for ，删除列表中的一项后，视图渲染出错
 createTime: 2020-02-11
-updateTime: 2020-02-11
+updateTime:
 categories: vue
 tags:
 description:
