--- a/src/posts/2020-02-11_在 .vue 单文件组件中引入 css 文件，并且样式只作用于当前组件的元素.md
+++ b/src/posts/2020-02-11_在 .vue 单文件组件中引入 css 文件，并且样式只作用于当前组件的元素.md
@@ -2,7 +2,7 @@
 id: edf8aa33-4448-4074-a6c1-48ac587b4ac9
 title: 在 .vue 单文件组件中引入 css 文件，并且样式只作用于当前组件的元素
 createTime: 2020-02-11
-updateTime: 2020-02-11
+updateTime:
 categories: vue
 tags:
 description:
