--- a/src/posts/2020-02-12_vue2 踩坑笔记.md
+++ b/src/posts/2020-02-12_vue2 踩坑笔记.md
@@ -2,7 +2,7 @@
 id: 95f8551e-aa55-46e0-901b-7348879b594c
 title: vue2 踩坑笔记
 createTime: 2020-02-12
-updateTime: 2020-02-12
+updateTime:
 categories: vue
 tags:
 description: 记录学习、使用 vue2 时踩的坑和解决办法
