--- a/src/posts/2020-02-15_字符串匹配：Sunday算法.md
+++ b/src/posts/2020-02-15_字符串匹配：Sunday算法.md
@@ -2,7 +2,7 @@
 id: 824ddaaf-1d7d-4ba9-a99b-3a545b3d7838
 title: 字符串匹配：Sunday算法
 createTime: 2020-02-15
-updateTime: 2020-02-15
+updateTime:
 categories: js
 tags: 算法
 description:
