--- a/src/posts/2020-02-15_算法：动态规划.md
+++ b/src/posts/2020-02-15_算法：动态规划.md
@@ -2,7 +2,7 @@
 id: c1e8c670-ddfb-4606-9507-81b484d78b96
 title: 算法：动态规划
 createTime: 2020-02-15
-updateTime: 2020-02-15
+updateTime:
 categories: js
 tags: 算法
 description:
