--- a/src/posts/2020-03-02_element 踩坑笔记.md
+++ b/src/posts/2020-03-02_element 踩坑笔记.md
@@ -2,7 +2,7 @@
 id: 1282594d-7241-47f2-bcf5-52929c35a5bc
 title: element 踩坑笔记
 createTime: 2020-03-02
-updateTime: 2020-03-02
+updateTime:
 categories: element-ui
 tags:
 description: 记录使用 element-ui 时遇到的坑
