--- a/src/posts/2020-03-02_开发方法论.md
+++ b/src/posts/2020-03-02_开发方法论.md
@@ -2,7 +2,7 @@
 id: 5a97de18-d24a-4e6d-ae56-252964ccc342
 title: 开发方法论
 createTime: 2020-03-02
-updateTime: 2020-03-02
+updateTime:
 categories: 一些方法论
 tags:
 description: 记录学习、工作中的心得
