--- a/src/posts/2020-04-07_js 单线程、执行栈、事件循环.md
+++ b/src/posts/2020-04-07_js 单线程、执行栈、事件循环.md
@@ -2,7 +2,7 @@
 id: fbf204d6-c054-42ed-811b-d9341d0a0a1e
 title: js 单线程、执行栈、事件循环
 createTime: 2020-04-07
-updateTime: 2020-04-07
+updateTime:
 categories: js
 tags:
 description:
