--- a/src/posts/2020-04-07_纯 canvas 实现漂亮的仪表盘.md
+++ b/src/posts/2020-04-07_纯 canvas 实现漂亮的仪表盘.md
@@ -2,7 +2,7 @@
 id: 72236541-d8e6-4a7c-835a-9eb01bc4b771
 title: 纯 canvas 实现漂亮的仪表盘
 createTime: 2020-04-07
-updateTime: 2020-04-07
+updateTime:
 categories: 写着玩, js
 tags: canvas
 description: 纯canvas实现漂亮的仪表盘，内含源码
