--- a/src/posts/2020-04-15_异步任务排队调用.md
+++ b/src/posts/2020-04-15_异步任务排队调用.md
@@ -2,7 +2,7 @@
 id: c37b6cc2-8ca2-4003-9af0-a61fd5476026
 title: 异步任务排队调用
 createTime: 2020-04-15
-updateTime: 2020-04-15
+updateTime:
 categories: js
 tags:
 description:
