--- a/src/posts/2020-06-15_动态读取菜单、面包屑.md
+++ b/src/posts/2020-06-15_动态读取菜单、面包屑.md
@@ -2,7 +2,7 @@
 id: 9ad1ee52-9be7-4682-a2b8-ea79fa35b68c
 title: 动态读取菜单、面包屑
 createTime: 2020-06-15
-updateTime: 2020-06-15
+updateTime:
 categories: 一些方法论
 tags: vue-router
 description: 动态读取菜单、面包屑（权限控制、名称显示）
