--- a/src/posts/2020-08-03_监听鼠标左右键同时按下.md
+++ b/src/posts/2020-08-03_监听鼠标左右键同时按下.md
@@ -2,7 +2,7 @@
 id: c9b26c02-158f-4b26-a7b5-5aed965afbfb
 title: 监听鼠标左右键同时按下
 createTime: 2020-08-03
-updateTime: 2020-08-03
+updateTime:
 categories: js
 tags:
 description:
