--- a/src/posts/2021-06-17_拖拽元素内部有富文本时，富文本无法通过鼠标拖拽选中文字.md
+++ b/src/posts/2021-06-17_拖拽元素内部有富文本时，富文本无法通过鼠标拖拽选中文字.md
@@ -2,7 +2,7 @@
 id: 586e2850-9911-4888-8428-6b6113440a26
 title: 拖拽元素内部有富文本时，富文本无法通过鼠标拖拽选中文字
 createTime: 2021-06-17
-updateTime: 2021-06-17
+updateTime:
 categories: js
 tags:
 description:
