--- a/src/posts/2021-06-18_chrome 中的 F12 调试技巧.md
+++ b/src/posts/2021-06-18_chrome 中的 F12 调试技巧.md
@@ -2,7 +2,7 @@
 id: 8d6defc2-9bf7-44b4-ac3a-ecdf576cbe77
 title: chrome 中的 F12 调试技巧
 createTime: 2021-06-18
-updateTime: 2021-06-18
+updateTime:
 categories: 底层工具
 tags:
 description:
