--- a/src/posts/2021-06-18_vue2 源码中的技巧.md
+++ b/src/posts/2021-06-18_vue2 源码中的技巧.md
@@ -2,7 +2,7 @@
 id: b1e4c860-f668-4b11-86f1-e194c56695e8
 title: vue2 源码中的技巧
 createTime: 2021-06-18
-updateTime: 2021-06-18
+updateTime:
 categories: vue, js
 tags:
 description: 记录在学习 vue2 源码的过程中，发现的技巧
