--- a/src/posts/2021-11-18_setMonth “出错“.md
+++ b/src/posts/2021-11-18_setMonth “出错“.md
@@ -2,7 +2,7 @@
 id: 7d258897-8663-467a-a41d-b6b9a8be6976
 title: setMonth “出错“
 createTime: 2021-11-18
-updateTime: 2021-11-18
+updateTime:
 categories: js
 tags:
 description: setMonth 出错。是因为第二个参数
