--- a/src/posts/2021-12-10_Life Game.md
+++ b/src/posts/2021-12-10_Life Game.md
@@ -2,7 +2,7 @@
 id: 39589fc6-10d1-4461-925e-4c51adcff645
 title: Life Game
 createTime: 2021-12-10
-updateTime: 2021-12-10
+updateTime:
 categories: 写着玩
 tags:
 description: 康威生命游戏
