--- a/src/posts/2022-08-11_用 p5.js 写个五子棋.md
+++ b/src/posts/2022-08-11_用 p5.js 写个五子棋.md
@@ -2,7 +2,7 @@
 id: 39e2b586-e3bd-4f48-a6ff-12a97574869d
 title: 用 p5.js 写个五子棋
 createTime: 2022-08-11
-updateTime: 2022-08-11
+updateTime:
 categories: 写着玩
 tags: p5
 description: 用 p5.js 写个五子棋，内附完整代码
