--- a/src/posts/2022-08-12_css flex 踩坑总结.md
+++ b/src/posts/2022-08-12_css flex 踩坑总结.md
@@ -2,7 +2,7 @@
 id: 684938b7-6ada-4187-959a-cf9369a9f74c
 title: css flex 踩坑总结
 createTime: 2022-08-12
-updateTime: 2022-08-12
+updateTime:
 categories: css
 tags: flex
 description: css flex 踩坑总结：(1) 使用 flex 的 center 时，如果本身尺寸 > 父容器尺寸，则内容会显示不全 (2) flex 布局中 overflow:hidden 失效
