--- a/src/posts/2022-08-24_p5.js 写个连连看，发布到 github pages.md
+++ b/src/posts/2022-08-24_p5.js 写个连连看，发布到 github pages.md
@@ -2,7 +2,7 @@
 id: 7fdb72d6-180c-4ef2-9d0e-08358f7c3364
 title: p5.js 写个连连看，发布到 github pages
 createTime: 2022-08-24
-updateTime: 2022-08-24
+updateTime:
 categories: 写着玩, 底层工具
 tags: p5
 description: p5.js 写个连连看并发布到 github pages
