--- a/src/posts/2023-03-09_工作记录：bi重构.md
+++ b/src/posts/2023-03-09_工作记录：bi重构.md
@@ -2,7 +2,7 @@
 id: e2101432-0ebb-40f0-8303-edf97004f667
 title: 工作记录：bi重构
 createTime: 2023-03-09
-updateTime: 2023-03-09
+updateTime:
 categories: 工作记录
 tags:
 description: 工作记录：2023.3.8工作汇报：由复用widget功能引起的重构
