--- a/src/posts/2023-03-30_vue3 笔记.md
+++ b/src/posts/2023-03-30_vue3 笔记.md
@@ -2,7 +2,7 @@
 id: e783f3f4-69c6-47ee-8e6b-93e958161c1b
 title: vue3 笔记
 createTime: 2023-03-30
-updateTime: 2023-03-30
+updateTime:
 categories: vue
 tags:
 description: vue3笔记：watchEffect 的起源；getCurrentInstance； props
