--- a/src/posts/2023-03-30_开发时修改组件内容后，页面仍显示旧内容.md
+++ b/src/posts/2023-03-30_开发时修改组件内容后，页面仍显示旧内容.md
@@ -2,7 +2,7 @@
 id: 2ed30d40-e212-421b-b1cf-54f5835ebd20
 title: 开发时修改组件内容后，页面仍显示旧内容
 createTime: 2023-03-30
-updateTime: 2023-03-30
+updateTime:
 categories: 底层工具
 tags:
 description: 解决 “开发时修改组件内容后，页面仍显示旧内容” 的问题
