--- a/src/posts/2023-05-25_工作记录：在线 word - 列表.md
+++ b/src/posts/2023-05-25_工作记录：在线 word - 列表.md
@@ -2,7 +2,7 @@
 id: 4d76dcbe-6221-4e23-8409-a0229a78bc02
 title: 工作记录：在线 word - 列表
 createTime: 2023-05-25
-updateTime: 2023-05-25
+updateTime:
 categories: 工作记录
 tags:
 description: 工作记录：实现在线 word 中的列表功能。使用平级标签并通过 level 计算列表的序号
