--- a/src/posts/2020-02-25_工作记录：文件秒传、分块上传、断点续传的原理.md
+++ b/src/posts/2020-02-25_工作记录：文件秒传、分块上传、断点续传的原理.md
@@ -2,7 +2,7 @@
 id: 327236cc-fdc1-481c-bd46-66de94be06ab
 title: 工作记录：文件秒传、分块上传、断点续传的原理
 createTime: 2020-02-25
-updateTime: 2020-02-25
+updateTime:
 categories: 工作记录
 tags:
 description: 2020.02.25 工作记录：文件秒传、分块上传、断点续传的原理
