--- a/src/posts/2021-06-18_vue2 源码思路理解.md
+++ b/src/posts/2021-06-18_vue2 源码思路理解.md
@@ -2,7 +2,7 @@
 id: 0d3cba0d-a85d-4dc8-b70d-26a1e04083f3
 title: vue2 源码思路理解
 createTime: 2021-06-18
-updateTime: 2021-06-18
+updateTime:
 categories: vue
 tags:
 description: 记录自己学习 vue2 源码的过程
