--- a/src/posts/2022-07-08_已有项目将 vue2.6 升级为 2.7.md
+++ b/src/posts/2022-07-08_已有项目将 vue2.6 升级为 2.7.md
@@ -2,7 +2,7 @@
 id: c7e77e23-e297-4bdb-9c69-887167a5f97e
 title: 已有项目将 vue2.6 升级为 2.7
 createTime: 2022-07-08
-updateTime: 2022-07-08
+updateTime:
 categories: vue
 tags:
 description: 已有项目将 vue 2.6 升级为 2.7 的步骤&注意事项
