--- a/src/posts/2023-05-30_css 实现丰富的序号效果.md
+++ b/src/posts/2023-05-30_css 实现丰富的序号效果.md
@@ -2,7 +2,7 @@
 id: 03a19b54-036f-42e3-911a-cab43c44ec09
 title: css 实现丰富的序号效果
 createTime: 2023-05-30
-updateTime: 2023-05-30
+updateTime:
 categories: css
 tags:
 description: 使用原生 css 实现丰富的序号效果（任意序号规则、多级序号）
