--- a/src/posts/2024-04-11_学习 vueuse 源码.md
+++ b/src/posts/2024-04-11_学习 vueuse 源码.md
@@ -2,7 +2,7 @@
 id: c2896490-0824-433a-981d-af1e8aecb418
 title: 学习 vueuse 源码
 createTime: 2024-04-11
-updateTime: 2024-04-11
+updateTime:
 categories: vueuse
 tags:
 description: 【想不明白】 特意用 counter computed 是什么目的？建一个 ref 并返回，直接在 blur 和 focus 的 handler 中修改 ref 不行吗？【想不明白】 onMounted 和 onUpdated 两行是干什么的？未曾设想的道路，还是用的 customRef。vue3 提供了 customRef。
