chore: remove "==highlight==" syntax in markdown since showdown and github does not support it

--- a/src/posts/2021-06-18_vue2 源码思路理解.md
+++ b/src/posts/2021-06-18_vue2 源码思路理解.md
@@ -1387,7 +1387,7 @@ export function nextTick(cb?: Function, ctx?: Object) {
 }
 ```
 
-==注意区分，有两个队列：queue 和 callbacks==
+<span style="color:darkorange">注意区分，有两个队列：queue 和 callbacks</span>
 
 - queue 是用来放 watcher 的。每次 queue 由空变为有内容时，会调用 `nextTick(flushSchedulerQueue)` 来把 flushSchedulerQueue 放到 callbacks 中
 - 每次调用 nextTick，都会把 cb 放到 callbacks 中。
@@ -1461,7 +1461,7 @@ pending = true;
 
 执行 flushSchedulerQueue:
 
-- 执行 queue 中的所有 watcher.run() (queue = [ w1 ] ） ==执行 w1==
+- 执行 queue 中的所有 watcher.run() (queue = [ w1 ] ） <span style="color:darkorange">执行 w1</span>
 -     清空 queue
 
 执行 cb1
@@ -1810,13 +1810,13 @@ vm 中创建了 4 个 Dep 对象，只关注最后一个 d_a：
 
 vm.\_watchers 中有三个 watcher：
 
-- 计算属性 b 对应的 w_b（ w_b.deps = ==[d_a]== ）
+- 计算属性 b 对应的 w_b（ w_b.deps = <span style="color:darkorange">[d_a]</span> ）
 - 计算属性 c 对应的 w_c（ w_c.deps = [] ）
-- 渲染函数 renderFunction 对应的 w0（w0.deps = ==[d_a]== ）
+- 渲染函数 renderFunction 对应的 w0（w0.deps = <span style="color:darkorange">[d_a]</span> ）
 
 vm 中的 4 个 Dep 对象，仍然只关注 d_a：
 
-- vm.\_data.a 的 getter/setter 通过闭包引用的 dep，记为 d_a（d_a.subs = ==[w1,renderWatcher]== ）
+- vm.\_data.a 的 getter/setter 通过闭包引用的 dep，记为 d_a（d_a.subs = <span style="color:darkorange">[w1,renderWatcher]</span> ）
 
 #### 情况二中多出来的依赖关系是怎么来的
 
@@ -1825,7 +1825,7 @@ vm 中的 4 个 Dep 对象，仍然只关注 d_a：
 整理并简化一下，computedGetter 就变成：
 ![在这里插入图片描述](../post-assets/ceb7f888-f6ac-4114-b138-d0213c70cac2.png)
 
-所以，计算属性是一个 ==桥梁==。让渲染函数的 watcher 和 a 之间构建了直接的依赖关系。
+所以，计算属性是一个 <span style="color:darkorange">桥梁</span>。让渲染函数的 watcher 和 a 之间构建了直接的依赖关系。
 
 ##### 再啰嗦几句
 
@@ -1834,7 +1834,7 @@ vm 中的 4 个 Dep 对象，仍然只关注 d_a：
 - a 变化时，会通知所有依赖更新，因为属性 a 有 dep。
 - b 变化时，不会触发任何更新，因为 b 它自己就是个 watcher，根本没有 dep 这个属性
 
-==依赖链并不是：**w0 => b => a**，而是 **w0 => a，w_b => a**==
+<span style="color:darkorange">依赖链并不是：**w0 => b => a**，而是 **w0 => a，w_b => a**</span>
 
 直接让 w0 和 a 建立了联系，所以 a 变的时候，w0 也会变。w0 变的时候需要取 b 的值，b 才重新计算的。
 
