--- a/src/posts/2022-08-24_p5.js 写个连连看，发布到 github pages.md
+++ b/src/posts/2022-08-24_p5.js 写个连连看，发布到 github pages.md
@@ -231,11 +231,17 @@ while (leftCount > 0) {
 
 #### 再看一遍路径长度
 
-==step1 不拐弯== 肯定是最近的
+<span style="color:darkorange">step1 不拐弯</span> 肯定是最近的
+
 ![在这里插入图片描述](../post-assets/2e1a6ae6-8fb6-4189-8989-b2d0535548b1.png)
-==step2 拐一个弯== 和 ==step3 转两个弯，在圈上走== ，路径长度是一样的，都是 `x坐标差 + y坐标差`
-![在这里插入图片描述](../post-assets/f0d244e2-4eb2-4306-80ea-844e5576f907.png)![在这里插入图片描述](../post-assets/2c83732b-44ab-4dda-95fd-8f84d05986d5.png)
-==step4 转两个弯 从圈外走==，路径长度是 `x坐标差 + y坐标差 + 2 * toInnerRectDistance`
+
+<span style="color:darkorange">step2 拐一个弯</span> 和 <span style="color:darkorange">step3 转两个弯，在圈上走</span> ，路径长度是一样的，都是 `x坐标差 + y坐标差`
+
+![在这里插入图片描述](../post-assets/f0d244e2-4eb2-4306-80ea-844e5576f907.png)
+![在这里插入图片描述](../post-assets/2c83732b-44ab-4dda-95fd-8f84d05986d5.png)
+
+<span style="color:darkorange">step4 转两个弯 从圈外走</span>，路径长度是 `x坐标差 + y坐标差 + 2 * toInnerRectDistance`
+
 ![在这里插入图片描述](../post-assets/345de602-1a00-48d1-9d4c-b731b3f44077.png)
 
 ## （四）完善功能
