--- a/src/posts/2023-03-09_工作记录：bi重构.md
+++ b/src/posts/2023-03-09_工作记录：bi重构.md
@@ -75,11 +75,15 @@ widget 包中引用了主应用的很多内容：
 可以把这些内容都当作参数，调用 widget 包的组件和方法时传参进去。但这样很不合理。
 
 所以只能把这些内容也独立成包，这样包和包之间可以互相调用了：
+
 ![在这里插入图片描述](../post-assets/e91cd74b-03d4-4f10-b582-6f246cfd9a05.png)
+
 But，这是一个连锁反应：如果 widget 依赖 a，a 独立成包了。a 又依赖了 b，同理 b 也需要独立成包。
 这样一步步找下去，主应用中的大部分代码都被提溜起来了，主应用就不剩多少东西了。。
+
 ![在这里插入图片描述](../post-assets/19e99251-1c31-418a-8afd-57f8d8e7aca0.png)
-==会出现这种情况，是因为之前的代码之间互相引用比较随意，导致现在重构难以进行。以后的开发要吸取教训==
+
+<span style="color:darkorange">会出现这种情况，是因为之前的代码之间互相引用比较随意，导致现在重构难以进行。以后的开发要吸取教训</span>
 
 ##### 麻烦 2：少了一层 namespace
 
