chore: reorganize post categories

--- a/src/posts/2020-01-16_vue-cli3配置多页面.md
+++ b/src/posts/2020-01-16_vue-cli3配置多页面.md
@@ -3,7 +3,7 @@ id: 24d0c7eb-6f0f-4a4a-becc-266dbcf0c8aa
 title: vue-cli3配置多页面
 createTime: 2020-01-16
 updateTime:
-categories: 底层工具
+categories: build tools
 tags: vue-cli
 description: 在 vue-cli3 项目中，使用 vue.config.js 的 pages 字段来配置多页面。pages 中可以自定义变量，变量值可以在模板中使用（ejs 语法）
 ---
