--- a/src/posts/2022-07-15_vite项目中动态引用图片.md
+++ b/src/posts/2022-07-15_vite项目中动态引用图片.md
@@ -3,7 +3,7 @@ id: 25e9063b-f197-4430-a355-80fc7734eafa
 title: vite项目中动态引用图片
 createTime: 2022-07-15
 updateTime:
-categories: 底层工具
+categories: build tools
 tags: vite
 description: vite项目中动态引用图片
 ---
