--- a/src/posts/2023-03-09_工作记录：调研monorepo和微前端.md
+++ b/src/posts/2023-03-09_工作记录：调研monorepo和微前端.md
@@ -3,8 +3,8 @@ id: 5a8efdfa-5602-4092-bf3f-15a0b5aa84ec
 title: 工作记录：调研monorepo和微前端
 createTime: 2023-03-09
 updateTime:
-categories: 工作记录, 底层工具
-tags: monorepo
+categories: 工作记录
+tags: monorepo, 微前端
 description: 因工作需要，调研 monorepo、微前端
 ---
 
