--- a/src/posts/2023-03-30_如何修改项目中依赖的 npm 包的代码.md
+++ b/src/posts/2023-03-30_如何修改项目中依赖的 npm 包的代码.md
@@ -3,8 +3,8 @@ id: 22005d1f-0d27-40c0-9eec-f4cade931133
 title: 如何修改项目中依赖的 npm 包的代码
 createTime: 2023-03-30
 updateTime:
-categories: 底层工具
-tags: npm
+categories: package managers
+tags:
 description: 使用 patch-package 或 pnpm package 修改项目中依赖的 npm 包的代码
 ---
 
