post: create <个人博客网站开发记录 - 将 csdn 文章下载到本地>

--- a/src/posts/2024-07-19_个人博客网站开发记录.md
+++ b/src/posts/2024-07-19_个人博客网站开发记录.md
@@ -2,7 +2,7 @@
 id: fa43201f-1e9e-411d-abc6-2d9e1411c13c
 title: 个人博客网站开发记录
 createTime: 2024-07-19
-updateTime:
+updateTime: 2024-07-22
 categories: 工作记录, nodejs
 tags: github pages, github workflow
 description: 记录我开发个人博客网站的过程。用 md 格式写文章，自动生成静态网页并部署至 GitHub Pages。
@@ -63,18 +63,7 @@ const posts = [
 
 在 csdn 上写了 90 篇文章，要把它们全部下载到本地，文章中引用的图片也要同时下载，并把正文中的图片链接从网络链接修改为本地路径。
 
-我写了个爬虫去处理，难点在于突破 csdn 的防护机制。
-
-以前写过一个 csdn 的爬虫，获取 csdn 上所有文章信息（那时候是获取的正文是 html 格式的，现在要拿的是 markdown 格式的，不一样）。之前的爬虫比较简单，在浏览器中人工登录、通过图片校验后获取 cookie，复制到代码中使用就可以。
-
-这次要拿到正文的 markdown 格式，调取的接口和之前不同。我还是按照老办法获取“人工”cookie，但是爬虫还是会被拦住。这个问题卡了我很久，很头痛，最终发现此接口的校验不只是 cookie，还要另外一个加密字段（简称为 key1）。这个 key1 是把接口的完整地址按照固定的加密方式计算出来的。接口的完整地址中包含了文章 id，所以不同的文章，最后计算出的 key1 是不一样的。
-
-老方法的人工 cookie 或者说人工 headers 是起不到作用了，每个文章的 headers 都不一样。爬虫中必须用它的加密算法！
-
-死了很多脑细胞解决了这个问题，可以想象从压缩后的代码中扒出加密方法是多么困难。失败了无数次，成功的那一刻我都不敢相信，万分激动，成就感爆棚！
-
-然后，第二天爬虫就不能用了。我暂时没有动力去处理了，反正我已经下载了一份完整的，不需要反复下载了。以后如果有兴趣在研究看看是出了什么问题吧。
-后面发现新问题，有的图片下载失败（图片存在，但是大小为 0），我不确定是发声了什么异常，但是因为爬虫不能用了所以也没法研究。幸好出问题的图片数量不多，我人工处理了。
+我写了个爬虫去处理，难点在于突破 csdn 的防护机制，见 [个人博客网站开发记录 - 将 csdn 文章下载到本地](post:8fdbb844-41f8-487e-816d-3cee2b948c54)
 
 ## 解析 md：提取 metadata 和正文
 
