--- a/src/posts/2024-07-19_个人博客网站开发记录.md
+++ b/src/posts/2024-07-19_个人博客网站开发记录.md
@@ -3,7 +3,7 @@ id: fa43201f-1e9e-411d-abc6-2d9e1411c13c
 title: 个人博客网站开发记录
 createTime: 2024-07-19
 updateTime: 2024-07-22
-categories: 工作记录, nodejs
+categories: nodejs
 tags: github pages, github workflow
 description: 记录我开发个人博客网站的过程。用 md 格式写文章，自动生成静态网页并部署至 GitHub Pages。
 ---
