--- a/src/posts/2022-08-24_p5.js 写个连连看，发布到 github pages.md
+++ b/src/posts/2022-08-24_p5.js 写个连连看，发布到 github pages.md
@@ -1,37 +1,16 @@
 ---
 id: 7fdb72d6-180c-4ef2-9d0e-08358f7c3364
-title: p5.js 写个连连看，发布到 github pages
+title: p5.js 写个连连看
 createTime: 2022-08-24
 updateTime:
-categories: 写着玩
-tags: p5, github pages
-description: p5.js 写个连连看并发布到 github pages
+categories: js
+tags: 算法, p5
+description: 用 p5.js 开发连连看小游戏，提供多种牌型，成功消除时显示路径，无可消除格子时自动洗牌，提供洗牌、提示等功能。关键算法是判断两个格子是否能够相连，并且找出最短路径。内附在线预览地址与源码。
 ---
 
-预览点[这里](https://liuzx-emily.github.io/liuzx-emily/) ，代码在相应的 github 仓库中
-
-（首次加载比较慢，以后可以看看怎么优化一下打包）
+[在线预览](https://liuzx-emily.github.io/playground/#/link-game)，[源码](https://github.com/liuzx-emily/playground/tree/main/src/views/link-game)
 
 ## 准备工作
-
-###### vue3 + vite + p5 + [eslint](https://eslint.vuejs.org/user-guide/)
-
-```js
-// .eslintrc.cjs
-module.exports = {
-  env: {
-    browser: true,
-    es2021: true,
-  },
-  extends: ["eslint:recommended", "plugin:vue/vue3-essential"],
-  parserOptions: {
-    ecmaVersion: "latest",
-    sourceType: "module",
-  },
-  plugins: ["vue"],
-  rules: {},
-};
-```
 
 ###### 数据结构
 
@@ -51,7 +30,9 @@ cells = [
 ###### 使用 p5 的 library
 
 click 时需要判断是否点到了某个格子。之前写五子棋时就有同样的需求，那时自己写了个方法实现的。这次想锻炼一下检索能力，就查了查有没有现成的包，果然找到了—— [p5.collide2D](https://github.com/bmoren/p5.collide2D)
+
 但是说明里没讲怎样引用。在项目里直接 `import` 会报错：`Uncaught ReferenceError: p5 is not defined`
+
 只能去看 p5.collide2d.js 的源码了：
 
 ```js
@@ -113,44 +94,46 @@ p5.prototype.collideRectRectVector = function (p1, sz, p2, sz2) {...};
 ## 关键算法：判断相连
 
 判断两个格子是否能相连。如果能相连，还要返回相连路径
+
 ![在这里插入图片描述](../post-assets/be879a5d-7bbb-4b7c-bb08-f954457eb1a2.png)
 
 ### 傻瓜算法
 
-先写了个傻瓜算法，粗暴的遍历查找
+先写了个傻瓜算法，粗暴遍历
 
 - y 从 min 到 max（ cell3 和 cell4 沿 y 轴向下移），判断 cell1 -> cell3 -> cell4 -> cell2 通不通
+  ![在这里插入图片描述](../post-assets/e04b19ea-3e02-48bd-b30c-932a7ee53e1b.png)
 - x 从 min 到 max（ cell3 和 cell4 沿 x 轴向右移），判断 cell1 -> cell3 -> cell4 -> cell2 通不通
-  ![在这里插入图片描述](../post-assets/e04b19ea-3e02-48bd-b30c-932a7ee53e1b.png)![在这里插入图片描述](../post-assets/f5b852c8-0de0-48d3-81ea-981896303126.png)
+  ![在这里插入图片描述](../post-assets/f5b852c8-0de0-48d3-81ea-981896303126.png)
 
-这样就简化为判断三条直线通不通
-
-但有很多不必要的计算，找的也不是最短路径
+这样就简化为判断三条直线通不通。但有很多不必要的计算，找的也不是最短路径
 
 ### 优化算法
 
-小伙伴提供了一个有趣的思路，步骤如下：
+步骤：
 
 1. check if 不拐弯
 2. check if 拐一个弯
 3. check if 转两个弯，从**圈**上走
 4. check if 转两个弯，从**圈**外走，找最短的
 
-具体解释如下：
+具体解释如下
 
 #### passableCells
 
-passableCells：cell 沿着上下左右四个方向延伸，直到遇到障碍物为止
+passableCells：cell 沿着上下左右四个方向延伸，直到遇到障碍物为止。下图中 cell1 的 passableCells 是黄色格子，cell2 的 passableCells 是蓝色格子；
 
-如下图：cell1 的 passableCells 是黄色格子，cell2 的 passableCells 是蓝色格子；
+![在这里插入图片描述](../post-assets/a3047035-1d38-44e8-a3d4-86c98d2b9d47.png)
 
-![在这里插入图片描述](../post-assets/a3047035-1d38-44e8-a3d4-86c98d2b9d47.png)![在这里插入图片描述](../post-assets/9db20ef9-8da8-4977-8d43-d1a6c22f050b.png)
+passableCells 可以分为**圈上的**和**圈外的**，**圈**指的是 cell1 和 cell2 围成的矩形。下图中有五角星标记的格子就是“圈上的”：
 
-更近一步，passableCells 还可以分为**圈上的**和**圈外的**。
-如下图：**圈** 指的是 cell1 和 cell2 围成的矩形，有三角标记的格子就是“圈上的”
-![在这里插入图片描述](../post-assets/b392f4ce-d59d-4465-9f64-08a29fa02eb5.png)![在这里插入图片描述](../post-assets/9285567c-ad45-404e-89b6-aeca63e7d241.png)
+![在这里插入图片描述](../post-assets/b392f4ce-d59d-4465-9f64-08a29fa02eb5.png)
+![在这里插入图片描述](../post-assets/9285567c-ad45-404e-89b6-aeca63e7d241.png)
+
 对于**圈外的** passableCells，要知道它的 **方向** 和 **到圈的距离**：
+
 如下图，三角标记的格子到 **圈** 的距离都是 1
+
 ![在这里插入图片描述](../post-assets/10c639da-8001-483c-86c6-7f8e8242ce17.png)
 
 ##### step1： check if 不拐弯
@@ -165,11 +148,14 @@ if (isDirectConnecting) {
 
 ##### step2：check if 拐一个弯
 
-等价于判断 passableCells_cell1_innerRect（cell1 的延伸格子，内圈上的） 和 passableCells_cell2_innerRect 是否有交集
+等价于判断 `passableCells_cell1_innerRect`（cell1 圈上的 passableCells） 和 `passableCells_cell2_innerRect` 是否有交集
 
 如下图：无交集，说明不可能只拐一个弯就连上
+
 ![在这里插入图片描述](../post-assets/9875e1b4-06fa-44ca-8268-ed5b1bcb8a10.png)
-有交集（星星格子），说明能连上。联通路径是 celll1->交集点->cell2
+
+有交集（星星格子），说明能只拐一个弯就连上。联通路径是 celll1->交集点->cell2
+
 ![在这里插入图片描述](../post-assets/a4d0a543-8319-412b-80b4-3efe1049438c.png)
 
 ```js
@@ -185,11 +171,14 @@ if (intersectionCell) {
 
 ##### step3：check if 转两个弯 在圈上走
 
-等价于判断：passableCells_cell1_innerRect 中的格子 和 passableCells_cell2_innerRect 的格子，是否有能直接连接的
+等价于判断：`passableCells_cell1_innerRect` 中的格子 和 `passableCells_cell2_innerRect` 的格子，是否有能直接连接的
 
-如下图：找到能直接连接的了：
+如下图，找到能直接连接的了：
+
 ![在这里插入图片描述](../post-assets/d482f7f1-3529-4051-a9bf-76efe22aedfd.png)
+
 没有能直接连接的：
+
 ![在这里插入图片描述](../post-assets/799e703f-290e-457f-9de7-636973e64de9.png)
 
 ```js
@@ -207,7 +196,8 @@ for (let i = 0; i <= passableCells_cell1_innerRect.length - 1; i++) {
 
 ##### step4：check if check if 转两个弯 从**圈** 外走，找最短路径
 
-等价于判断：passableCells_cell1_outerRect 中的格子 和 passableCells_cell2_outerRect 的格子，是否有能直接连接的
+等价于判断：`passableCells_cell1_outerRect` 中的格子 和 `passableCells_cell2_outerRect` 的格子，是否有能直接连接的
+
 ![在这里插入图片描述](../post-assets/31cdaa04-1510-4a8d-b8ae-d816f392e7c4.png)
 
 ```js
@@ -216,14 +206,10 @@ for (let i = 0; i <= passableCells_cell1_innerRect.length - 1; i++) {
 let distance = 1;
 let leftCount = passableCells_cell1_outerRect.length;
 while (leftCount > 0) {
-  const cell5s = passableCells_cell1_outerRect.filter(
-    (o) => o.toInnerRectDistance === distance
-  );
+  const cell5s = passableCells_cell1_outerRect.filter((o) => o.toInnerRectDistance === distance);
   for (let i = 0; i <= cell5s.length - 1; i++) {
     const cell5 = cell5s[i];
-    const cell6s = passableCells_cell2_outerRect.filter(
-      (o) => o.dir === cell5.dir
-    ); // 能连上的肯定是“方向”相同的
+    const cell6s = passableCells_cell2_outerRect.filter((o) => o.dir === cell5.dir); // 能连上的肯定是“方向”相同的
     for (let j = 0; j <= cell6s.length - 1; j++) {
       const cell6 = cell6s[j];
       if (checkIsDirectConnectable(cell5, cell6)) {
@@ -236,18 +222,18 @@ while (leftCount > 0) {
 }
 ```
 
-#### 再看一遍路径长度
+#### 路径长度
 
-<span style="color:darkorange">step1 不拐弯</span> 肯定是最近的
+`step1 不拐弯` 肯定是最近的
 
 ![在这里插入图片描述](../post-assets/2e1a6ae6-8fb6-4189-8989-b2d0535548b1.png)
 
-<span style="color:darkorange">step2 拐一个弯</span> 和 <span style="color:darkorange">step3 转两个弯，在圈上走</span> ，路径长度是一样的，都是 `x坐标差 + y坐标差`
+`step2 拐一个弯` 和 `step3 转两个弯，在圈上走`，路径长度是一样的，都是 `x坐标差 + y坐标差`
 
 ![在这里插入图片描述](../post-assets/f0d244e2-4eb2-4306-80ea-844e5576f907.png)
 ![在这里插入图片描述](../post-assets/2c83732b-44ab-4dda-95fd-8f84d05986d5.png)
 
-<span style="color:darkorange">step4 转两个弯 从圈外走</span>，路径长度是 `x坐标差 + y坐标差 + 2 * toInnerRectDistance`
+`step4 转两个弯 从圈外走`，路径长度是 `x坐标差 + y坐标差 + 2 * toInnerRectDistance`
 
 ![在这里插入图片描述](../post-assets/345de602-1a00-48d1-9d4c-b731b3f44077.png)
 
@@ -344,30 +330,6 @@ function removeTempDisplayItem(id) {}
 
 ### 其他
 
-新游戏、判断是否需要洗牌、洗牌、提示等，这些功能都没什么好说的
-![在这里插入图片描述](../post-assets/2d620860-5500-4e1b-8c6e-7c697e4be845.png)
+洗牌功能、判断是否需要洗牌、提示、新游戏，这些功能都比较简单，不说了。
+
 为了支持移动端，点击事件用 p5.touchEnded 替代 p5.click
-
-## 部署
-
-写完基本功能后截了个动图，爸妈看后说想玩一玩，所以我就发布在 github pages 上了。
-
-（途中发现一个事情，vite build 后的页面不能直接打开。因为打包后的代码还是模块化的，不能在 `file://` 中打开）
-
-github pages 可以设置 docs 为发布的目标文件夹
-
-![在这里插入图片描述](../post-assets/1005e084-0a40-4007-8837-af7a438c86c4.png)
-
-修改打包设置
-
-```js
-export default defineConfig({
-  // ...
-  build: {
-      outDir: "docs",
-});
-```
-
-每次修改完代码之后，重新打包，然后再 commit push（新的打包 docs 文件夹一定要 push 上去）
-github 就会自动 build 和 deploy 了，需要一定时间，进度可以看 repo 的 actions 页签：
-![在这里插入图片描述](../post-assets/d058b454-90d8-4f46-a0f9-dde67fa16af4.png)
