--- a/src/posts/2024-07-19_个人博客网站开发记录.md
+++ b/src/posts/2024-07-19_个人博客网站开发记录.md
@@ -8,6 +8,14 @@ tags: github pages, github workflow
 description: 记录我开发个人博客网站的过程。用 md 格式写文章，自动生成静态网页并部署至 GitHub Pages。
 ---
 
+系列文章
+
+- 《个人博客网站开发记录》
+- [《个人博客网站开发记录 - 将 csdn 文章下载到本地》](post:8fdbb844-41f8-487e-816d-3cee2b948c54)
+- [《个人博客网站开发记录 - super dev》](post:f0dafd07-89c7-4217-b8cf-8bc594646944)
+
+---
+
 ## 建站起因
 
 我有写技术博客的习惯，之前在 csdn 上已经写了四年。当年刚开始写时尝试过多家网站都不太满意，其中 csdn 稍好一些，所以就定居在那里了。
