chore: minor change to post

--- a/src/posts/2024-08-02_个人博客网站开发记录 - super dev.md
+++ b/src/posts/2024-08-02_个人博客网站开发记录 - super dev.md
@@ -113,6 +113,8 @@ package.json 添加两条命令：
 
 <p style="color:#ff5722">环境的兼容性问题真的好坑啊！网上很多文档、资料、讨论都忽视 windows 操作系统，在你自己测试踩坑前你不知道哪个命令、哪个运算符 windows 不支持。<br>如果只是不支持还好点，直接报错，能第一时间发现问题。如果是像我遇到的这个情况，它也不会报错，只是行为不一致。你不知道你写的一大串代码和命令到底哪里出的问题，很让人抓狂。</p>
 
+（兼容性问题真的蛮多的，再举一个例子：[nodejs --watch-path](https://nodejs.cn/api-v16/cli/watch_path.html)）
+
 言归正传，没办法用 & 实现并行了。自己写一个脚本实现并行：利用 node 的 child_process 模块
 
 ```js
