feat: post add series

--- a/src/posts/2024-07-19_个人博客网站开发记录.md
+++ b/src/posts/2024-07-19_个人博客网站开发记录.md
@@ -5,15 +5,8 @@ createTime: 2024-07-19
 updateTime: 2024-07-22
 categories: nodejs
 tags: github pages, github workflow
+series: 个人博客网站开发记录
 description: 记录我开发个人博客网站的过程。用 md 格式写文章，自动生成静态网页并部署至 GitHub Pages。
----
-
-系列文章
-
-- 《个人博客网站开发记录》
-- [《个人博客网站开发记录 - 将 csdn 文章下载到本地》](post:8fdbb844-41f8-487e-816d-3cee2b948c54)
-- [《个人博客网站开发记录 - super dev》](post:f0dafd07-89c7-4217-b8cf-8bc594646944)
-
 ---
 
 ## 建站起因
