--- a/src/posts/2024-07-22_个人博客网站开发记录 - 将 csdn 文章下载到本地.md
+++ b/src/posts/2024-07-22_个人博客网站开发记录 - 将 csdn 文章下载到本地.md
@@ -5,15 +5,8 @@ createTime: 2024-07-22
 updateTime:
 categories: nodejs
 tags: crawler
+series: 个人博客网站开发记录
 description: 开发个人博客网站时需要把我之前在 csdn 上写的文章下载到本地，并转换为指定格式。用 nodejs 爬虫实现。
----
-
-系列文章
-
-- [《个人博客网站开发记录》](post:fa43201f-1e9e-411d-abc6-2d9e1411c13c)
-- 《个人博客网站开发记录 - 将 csdn 文章下载到本地》
-- [《个人博客网站开发记录 - super dev》](post:f0dafd07-89c7-4217-b8cf-8bc594646944)
-
 ---
 
 [本文爬虫源码](https://github.com/liuzx-emily/download-blogs-from-csdn)
