--- a/src/posts/2024-08-02_个人博客网站开发记录 - super dev.md
+++ b/src/posts/2024-08-02_个人博客网站开发记录 - super dev.md
@@ -5,15 +5,8 @@ createTime: 2024-08-02
 updateTime:
 categories: nodejs
 tags:
+series: 个人博客网站开发记录
 description:
----
-
-系列文章
-
-- [《个人博客网站开发记录》](post:fa43201f-1e9e-411d-abc6-2d9e1411c13c)
-- [《个人博客网站开发记录 - 将 csdn 文章下载到本地》](post:8fdbb844-41f8-487e-816d-3cee2b948c54)
-- 《个人博客网站开发记录 - super dev》
-
 ---
 
 ## 需求描述
