--- a/src/posts/2024-08-07_npm 01：注册、登录 npm 账号.md
+++ b/src/posts/2024-08-07_npm 01：注册、登录 npm 账号.md
@@ -5,6 +5,7 @@ createTime: 2024-08-07
 updateTime:
 categories: npm commands
 tags: npm login
+series: npm 学习
 description: 在官网注册账号。npm login 前一定要确认 registry。登录时报错可能是 registry 写成了 http，应该改为 https。当 registry 设置正确但登录仍然报错，可能是网站被墙了，可以给 npm 设置 proxy 解决。
 ---
 
@@ -13,11 +14,6 @@ npm 分成三部分
 - [网站](https://www.npmjs.com/)：用来搜索 package，查看 doc，注册、管理 npm 账号等
 - CLI：提供很多 npm commands
 - registry：npm public registry
-
-npm 系列文章：
-
-- 《npm 01: 注册 npm 账号、登录》
-- [《npm 02: 发布 package》](post:712988a6-8046-4a13-acfb-23b33ceca90c)
 
 ---
 
