--- a/src/posts/2024-08-07_npm 02：发布 package.md
+++ b/src/posts/2024-08-07_npm 02：发布 package.md
@@ -5,14 +5,8 @@ createTime: 2024-08-07
 updateTime:
 categories: npm commands
 tags: npm publish
+series: npm 学习
 description: 在 npm 上发布包时，使用 files 字段和 .npmignore 指示你想要包含哪些文件。但是有部分内容是 npm 强制包含或排除的，你无法改变。并且在别人安装你的包时，npm还会把 .gitignore 文件强制改名为 .npmignore，这给很多 generator 项目带来麻烦。
----
-
-npm 系列文章：
-
-- [《npm 01: 注册 npm 账号、登录》](post:79824f54-fac8-4c8a-9904-bfc2c3433ee9)
-- 《npm 02: 发布 package》
-
 ---
 
 ## 发布一个最简单的包
@@ -148,7 +142,9 @@ generator 中 .gitignore 问题的解决方案：generator/template 中的 .giti
 ```
 
 发布后在 npm registry 上查看：
+
 ![在这里插入图片描述](../post-assets/06d9b793-496c-4739-ab92-46e8eafe51e9.png)
+
 只留下了三个文件！
 
 因为在未设置 files 时，默认包含所有文件。一旦你设置了 files 字段，那么将只包含你设置的内容了！更明确一点，是 **npm 强制包含的内容** + **在 files 字段设置了且不是被 npm 强制排除的内容**。具体在这个例子中：
