post: update <发布 npm package>

--- a/src/posts/2024-08-07_注册、登录 npm 账号.md
+++ b/src/posts/2024-08-07_注册、登录 npm 账号.md
@@ -1,10 +1,10 @@
 ---
 id: 79824f54-fac8-4c8a-9904-bfc2c3433ee9
-title: npm 01: 注册、登录 npm 账号
+title: 注册、登录 npm 账号
 createTime: 2024-08-07
 updateTime:
 categories: npm commands
-tags: npm login
+tags: npm login, npm proxy
 series: npm 学习
 description: 在官网注册账号。npm login 前一定要确认 registry。登录时报错可能是 registry 写成了 http，应该改为 https。当 registry 设置正确但登录仍然报错，可能是网站被墙了，可以给 npm 设置 proxy 解决。
 ---
