post: update <注册、登录 npm 账号>

--- a/src/posts/2024-08-07_注册、登录 npm 账号.md
+++ b/src/posts/2024-08-07_注册、登录 npm 账号.md
@@ -2,11 +2,11 @@
 id: 79824f54-fac8-4c8a-9904-bfc2c3433ee9
 title: 注册、登录 npm 账号
 createTime: 2024-08-07
-updateTime:
+updateTime: 2024-08-15
 categories: npm commands
 tags: npm login, npm proxy
 series: npm 学习
-description: 在官网注册账号。npm login 前一定要确认 registry。登录时报错可能是 registry 写成了 http，应该改为 https。当 registry 设置正确但登录仍然报错，可能是网站被墙了，可以给 npm 设置 proxy 解决。
+description: 在官网注册账号。npm login 前一定要确认 registry。登录时报错可能是 registry 写成了 http，应该改为 https。当 registry 设置正确但登录仍然报错，可能是网站被墙了，可以给 npm 设置 proxy 解决。npm whoami。npm logout
 ---
 
 npm 分成三部分
@@ -93,3 +93,16 @@ npm config delete proxy
 注意：<span style="color:darkorange;">在登录、发布包完成之后一定要把 proxy 取消掉！</span>`npm i` 等操作也都会走 proxy，会在不知不觉间用光你的 vpn 流量！
 
 使用 `npm i` 时被墙还是通过换 registry （国内镜像）解决，别用 proxy。像登录、发布这种不能随便换 registry 的情况再用 proxy —— 然后用完必须取消掉！
+
+## 其他
+
+```bash
+# 查看当前登录账号
+npm whoami
+# 退出
+npm logout
+```
+
+执行 `npm login` 时，会自动创建一个 Publish 类型的 access token 并使用它。
+
+`npm logout` 时会自动删除这个 token。
