--- a/src/posts/2024-08-07_注册、登录 npm 账号.md
+++ b/src/posts/2024-08-07_注册、登录 npm 账号.md
@@ -4,7 +4,7 @@ title: 注册、登录 npm 账号
 createTime: 2024-08-07
 updateTime: 2024-08-15
 categories: npm commands
-tags: npm login, npm proxy
+tags: npm login, vpn
 series: npm 学习
 description: 在官网注册账号。npm login 前一定要确认 registry。登录时报错可能是 registry 写成了 http，应该改为 https。当 registry 设置正确但登录仍然报错，可能是网站被墙了，可以给 npm 设置 proxy 解决。npm whoami。npm logout
 ---
