feat: can specify the headerId you want to scroll to when jumping to another post

--- a/src/posts/2024-07-19_个人博客网站开发记录.md
+++ b/src/posts/2024-07-19_个人博客网站开发记录.md
@@ -203,7 +203,7 @@ doc.querySelectorAll("img").forEach((img) => {
 });
 ```
 
-## 难点：md 语法的“灵活”
+## 难点：md 语法的“灵活” {difficulty_markdown_flexible_syntax}
 
 md 虽然有固定的语法格式，但在某些小问题上比较“灵活”。正是这种灵活带来了麻烦，举例说明：（应该说不是 md 过于灵活，而是实现 md 语法的各种解析器太灵活，不够统一）
 
