--- a/src/posts/2024-08-02_个人博客网站开发记录 - super dev.md
+++ b/src/posts/2024-08-02_个人博客网站开发记录 - super dev.md
@@ -15,7 +15,7 @@ description:
 
 原本我没有这个打算，以为用 vscode 就足够了。在 vscode 中写 md 时有语法高亮，想看完整效果就用它自带的预览功能。但是真的写文章时我发现不太 ok，原因如下：
 
-- 正如我在[《个人博客网站开发记录》](post:fa43201f-1e9e-411d-abc6-2d9e1411c13c)的《难点：md 语法的“灵活”》一节提到：vscode 和 showndown 的语法规则不一致。比如 `a_b_c`，vscode 中会把 b 两侧的下划线识别为普通文本，但是 showndown 会把它们识别成斜体的标志。这类不一致的表现我希望在写文章时能第一时间发现。
+- 正如我在[《个人博客网站开发记录》](post:fa43201f-1e9e-411d-abc6-2d9e1411c13c#difficulty_markdown_flexible_syntax) 中提到，开发的难点之一在于 **md 语法的“灵活”**：vscode 和 showndown 的语法规则不一致。比如 `a_b_c`，vscode 中会把 b 两侧的下划线识别为普通文本，但是 showndown 会把它们识别成斜体的标志。这类不一致的表现我希望在写文章时能第一时间发现。
 
 - 对相同的元素 vscode 和页面中的样式也不一样，比如 heading 的颜色、字号。我希望文章在**页面**中的排版是好看的。
 
